# Model_serving

./: README.md  pyproject.toml
Data/: rst_embedding.csv  sample.txt
Setting/: README.md
api/: app.py  functions.py  main.py
