[tool.poetry]
name = "palette-serving"
version = "0.1.0"
description = "Repository for serving a model for Palette"
authors = ["Moonsoo Park <kd.mpark10@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pandas = "^2.2.2"
torch = "^2.3.0"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
